# biollm-finetune

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.cpu  LICENSE  README.md  citation.cff  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
archive/local_2024/: 1-run_m7binstruct_bioasq.py  2-alternative-mistral-fine-tuning.py  2-fine-tuning_m7binstruct.py  2-fine-tuning_m7binstruct_bioasq.py  3-mistral-answer-generation.py  biobiqa_all.json  dataset_stats.py  goterms_generated_answers.json  summary_questions.json  test_mistral.py  yesno_questions.json
archive/server_2024/: 2-mistral-fine-tuning.py  3-mistral-answer-generation-withgpus.py  Dockerfile  Mistral_fine_tuning_bioasq.py  bioasq_generated_answers.json  biobiqa_first100.jsonl  biobiqa_generated_answers.json  drugbank_generated_answers.json  factoid_questions.json  install_dependencies.sh  list_questions.json  postprocessing.py  test.txt
archive/server_2024/Task11BGoldenEnriched/: readme.txt
archive/server_2024/Task12BGoldenEnriched/: 12B_golden_processed.jsonl  inspect_data.py  preprocess_data_files.py  validate_json_for_datasets.py
configs/: finetune.yaml  finetune_tiny.yaml  inference.yaml  inference_tiny.yaml
data/samples/: integration_gold.json  integration_questions.jsonl  smoke_gold.json  smoke_train.jsonl  unit_gold.json  unit_questions.jsonl
scripts/: docker_infer.sh  docker_train.sh
src/biollm_finetune/data/: data_sampling.py  loaders.py  preprocess.py
src/biollm_finetune/eval/: metrics.py  postprocess.py
src/biollm_finetune/inference/: generate.py
src/biollm_finetune/training/: finetune.py
src/biollm_finetune/utils/: config.py  device.py  logging.py  repro.py
tests/: conftest.py  test_adapter_loading.py  test_cli_errors.py  test_configs_wireup.py  test_generate_cli.py  test_loaders.py  test_manifest.py  test_metrics.py  test_postprocess.py  test_preprocess.py  test_prompting_unit.py
tests/data/: sample_gold.json  sample_questions.jsonl  tiny_prompts.yaml
